added more styling to inputs

--- a/index.html
+++ b/index.html
@@ -42,10 +42,30 @@
         </p>
       </div>
       <div class="inputContainer">
-        <input class="enterInput" placeholder="First Name" />
-        <input class="enterInput" placeholder="Last Name" />
-        <input class="enterInput" placeholder="Email Address" />
-        <input class="enterInput" placeholder="Password" />
+        <input
+          class="enterInput"
+          placeholder="First Name"
+          type="text"
+          required
+        />
+        <input
+          class="enterInput"
+          placeholder="Last Name"
+          type="text"
+          required
+        />
+        <input
+          class="enterInput"
+          placeholder="Email Address"
+          type="email"
+          required
+        />
+        <input
+          class="enterInput"
+          placeholder="Password"
+          type="password"
+          required
+        />
         <button class="claimButton" type="submit">CLAIM YOUR FREE TRIAL</button>
         <p class="submitAgreement">
           By clicking the button, you are agreeing to our
