added confirmation note

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </style>
   </head>
   <body>
+    <!--Sign Up Form Start-->
     <div class="leftSide">
       <h1 class="homeTitle">Learn to code by watching others</h1>
       <p class="homeDescription">
@@ -84,6 +85,26 @@
         </p>
       </form>
     </div>
+    <!--Sign Up Form End-->
+
+    <!--Confirmation Submission Start-->
+    <div class="confirmation">
+      <img
+        class="checkmark"
+        src="images/icons8-checkmark.svg"
+        alt="checkmark"
+      />
+      <h1 class="thankYou">
+        Thank you <span>[first name]</span> <span>[last name]</span> for
+        registering.
+      </h1>
+      <h2 class="thankYou">An email has been sent to you!</h2>
+      <p class="confirmationMessage">
+        Once you've confirmed that <span>[email address]</span> is your email
+        address, we'll get started right away.
+      </p>
+    </div>
+    <!--Confirmation Submission End-->
     <script src="main.js"></script>
   </body>
 </html>
