--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <!--Sign Up Form Start-->
-    <div class="leftSide">
+    <div class="leftSide" id="leftSide">
       <h1 class="homeTitle">Learn to code by watching others</h1>
       <p class="homeDescription">
         See how experienced developers solve problems in real-time. Watching
@@ -35,14 +35,18 @@
         invaluable.
       </p>
     </div>
-    <div class="rightSide">
+    <div class="rightSide" id="rightSide">
       <div class="purpleContainer">
         <p class="paymentPlan">
           <span class="freeTrial">Try it free 7 days</span> then $20/mo.
           thereafter
         </p>
       </div>
-      <form class="inputContainer" id="inputContainer">
+      <form
+        class="inputContainer"
+        id="inputContainer"
+        onsubmit="confirmation(event)"
+      >
         <input
           class="enterInput iconFN"
           id="first_name"
@@ -88,19 +92,19 @@
     <!--Sign Up Form End-->
 
     <!--Confirmation Submission Start-->
-    <div class="confirmation">
+    <div class="confirmation" id="confirmation">
       <img
         class="checkmark"
         src="images/icons8-checkmark.svg"
         alt="checkmark"
       />
       <h1 class="thankYou">
-        Thank you <span>[first name]</span> <span>[last name]</span> for
+        Thank you <span id="fname"></span> <span id="lname"></span> for
         registering.
       </h1>
       <h2 class="thankYou">An email has been sent to you!</h2>
       <p class="confirmationMessage">
-        Once you've confirmed that <span>[email address]</span> is your email
+        Once you've confirmed that <span id="ename"></span> is your email
         address, we'll get started right away.
       </p>
     </div>
